--- a/collection.html
+++ b/collection.html
@@ -64,7 +64,7 @@
                             </div>
                         </div>
                         <h2>BMW 428i -F32</h2>
-                       <button class="btn-2 btn-car batn-car-collection-page"
+                       <button class="btn-2 btn-car btn-car-collection-page"
         onclick="window.location.href='contact.html'">
   Book Now
 </button>
@@ -90,7 +90,7 @@
 
 
                         <h2>Audi</h2>
-                       <button class="btn-2 btn-car batn-car-collection-page"
+                       <button class="btn-2 btn-car btn-car-collection-page"
         onclick="window.location.href='contact.html'">
   Book Now
 </button>
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                         <h2>Audi</h2>
-                       <button class="btn-2 btn-car batn-car-collection-page"
+                       <button class="btn-2 btn-car btn-car-collection-page"
         onclick="window.location.href='contact.html'">
   Book Now
 </button>
@@ -160,7 +160,7 @@
                             </div>
                         </div>
                         <h2> Lexus</h2>
-                        <button class="btn-2 btn-car batn-car-collection-page"
+                        <button class="btn-2 btn-car btn-car-collection-page"
                             onclick="window.location.href ='contact.html'">
                             BookNow
                         </button>
@@ -185,7 +185,7 @@
 
 
                         <h2>Audi</h2>
-                        <button class="btn-2 btn-car batn-car-collection-page"
+                        <button class="btn-2 btn-car btn-car-collection-page"
                             onclick="window.location.href ='contact.html'">
                             BookNow
                         </button>
@@ -207,7 +207,7 @@
                             </div>
                         </div>
                         <h2>Lexus</h2>
-                        <button class="btn-2 btn-car batn-car-collection-page"
+                        <button class="btn-2 btn-car btn-car-collection-page"
                             onclick="window.location.href ='contact.html'">
                             BookNow
                         </button>
@@ -254,7 +254,7 @@
                         </div>
                     </div>
                     <h2>Lexus</h2>
-                    <button class="btn-2 btn-car batn-car-collection-page"
+                    <button class="btn-2 btn-car btn-car-collection-page"
                         onclick="window.location.href ='contact.html'">
                         BookNow
                     </button>
@@ -279,7 +279,7 @@
 
 
                     <h2>Land rover</h2>
-                    <button class="btn-2 btn-car batn-car-collection-page"
+                    <button class="btn-2 btn-car btn-car-collection-page"
                         onclick="window.location.href ='contact.html'">
                         BookNow
                     </button>
@@ -301,7 +301,7 @@
                         </div>
                     </div>
                     <h2>Lambo Offroad</h2>
-                    <button class="btn-2 btn-car batn-car-collection-page"
+                    <button class="btn-2 btn-car btn-car-collection-page"
                         onclick="window.location.href ='contact.html'">
                         BookNow
                     </button>
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                     <h2>Lexus</h2>
-                    <button class="btn-2 btn-car batn-car-collection-page"
+                    <button class="btn-2 btn-car btn-car-collection-page"
                         onclick="window.location.href ='contact.html'">
                         BookNow
                     </button>
@@ -372,7 +372,7 @@
 
 
                     <h2>Road Royals</h2>
-                    <button class="btn-2 btn-car batn-car-collection-page"
+                    <button class="btn-2 btn-car btn-car-collection-page"
                         onclick="window.location.href ='contact.html'">
                         BookNow
                     </button>
@@ -394,7 +394,7 @@
                         </div>
                     </div>
                     <h2>Lambo </h2>
-                    <button class="btn-2 btn-car batn-car-collection-page"
+                    <button class="btn-2 btn-car btn-car-collection-page"
                         onclick="window.location.href ='contact.html'">
                         BookNow
                     </button>
@@ -419,7 +419,7 @@
                 <p>Check For Cars</p>
                 <i class="fa-solid fa-arrow-right-long"></i>
             </button>
-            <button class="btn-2 btn-callout-black" onclick="window.location.href='collection.html'">
+            <button class="btn-2 btn-callout-black" onclick="window.location.href='contact.html'">
                 <p>Book Now</p>
                 <i class="fa-solid fa-phone"></i>
             </button>
