--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
             </div>
         </div>
             <h2>Mercedes AMG GTR</h2>
-            <button class="btn-2 btn-car">
-                <p>BOOK Now</p>
-                <i class="fa-solid fa-phone"></i>
-            </button>
+  <button class="btn-2 btn-car btn-car-collection-page"
+                        onclick="window.location.href ='contact.html'">
+                        BookNow
+                    </button>
         </div>
         </div>
 
@@ -142,10 +142,10 @@
                     </div>
                 </div>
                 <h2>Toyota </h2>
-                <button class="btn-2 btn-car">
-                    <p>BOOK Now</p>
-                    <i class="fa-solid fa-phone"></i>
-                </button>
+           <button class="btn-2 btn-car btn-car-collection-page"
+                        onclick="window.location.href ='contact.html'">
+                        BookNow
+                    </button>
             </div>
         </div>
 
@@ -164,10 +164,10 @@
                     </div>
                 </div>
                 <h2>Bugatti</h2>
-                <button class="btn-2 btn-car">
-                    <p>BOOK Now</p>
-                    <i class="fa-solid fa-phone"></i>
-                </button>
+                 <button class="btn-2 btn-car btn-car-collection-page"
+                        onclick="window.location.href ='contact.html'">
+                        BookNow
+                    </button>
             </div>
         </div>
 
@@ -186,10 +186,10 @@
                     </div>
                 </div>
                 <h2>lexus</h2>
-                <button class="btn-2 btn-car">
-                    <p>BOOK Now</p>
-                    <i class="fa-solid fa-phone"></i>
-                </button>
+                 <button class="btn-2 btn-car btn-car-collection-page"
+                        onclick="window.location.href ='contact.html'">
+                        BookNow
+                    </button>
             </div>
         </div>
 
@@ -209,10 +209,10 @@
                     </div>
                 </div>
                 <h2>Lamborghini venom</h2>
-                <button class="btn-2 btn-car">
-                    <p>BOOK Now</p>
-                    <i class="fa-solid fa-phone"></i>
-                </button>
+                 <button class="btn-2 btn-car btn-car-collection-page"
+                        onclick="window.location.href ='contact.html'">
+                        BookNow
+                    </button>
             </div>
         </div>
     </div>
@@ -285,7 +285,7 @@
                 <p>Check For Cars</p>
                 <i class="fa-solid fa-arrow-right-long"></i>
             </button>
-            <button class="btn-2 btn-callout-black" onclick="window.location.href='collection.html'">
+            <button class="btn-2 btn-callout-black" onclick="window.location.href='contact.html'">
                 <p>Book Now</p>
                 <i class="fa-solid fa-phone"></i>
             </button>
