--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
 
-  <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://unpkg.com/scrollreveal"></script>
 </head>
 
 <body>
@@ -45,22 +45,19 @@
         <form action="https://api.web3forms.com/submit" method="post">
 
 
-            <input 
-            type="hidden"
-            name="apikey"
-            value="2cd048fd-bd51-4034-bb34-e16907147a3f">
+            <input type="hidden" name="apikey" value="2cd048fd-bd51-4034-bb34-e16907147a3f">
 
-        <div class="car-select">
-         <div class="car-select-item">
-         <label for="location">Location</label>
-        <select name="location" id="location" class="car-select-input">
+            <div class="car-select">
+                <div class="car-select-item">
+                    <label for="location">Location</label>
+                    <select name="location" id="location" class="car-select-input">
 
-        <option value="delhi">delhi</option>
-        <option value="swiss">swiss</option>
-        <option value="nyc">nyc</option>
-         <option value="italy">italy</option>
-          </select>
-         </div>
+                        <option value="delhi">delhi</option>
+                        <option value="swiss">swiss</option>
+                        <option value="nyc">nyc</option>
+                        <option value="italy">italy</option>
+                    </select>
+                </div>
 
 
                 <div class="car-select-item">
@@ -80,12 +77,12 @@
                 </div>
             </div>
 
-                <div class="contact-form">
-                    <input type="text" name="name" placeholder="Name" required />
-                    <input type="email" name="email" placeholder="Email" required />
-                    <input type="phone" name="phone" placeholder="phone" required />
-                    <button type="submit" class="btn-2">Submit</button>
-                </div>
+            <div class="contact-form">
+                <input type="text" name="name" placeholder="Name" required />
+                <input type="email" name="email" placeholder="Email" required />
+                <input type="phone" name="phone" placeholder="phone" required />
+                <button type="submit" class="btn-2">Submit</button>
+            </div>
 
         </form>
     </section>
